# DipTrace-Generator

./: .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json  post-attach.sh  post-create.sh
.github/workflows/: ci.yml
DipTraceGenerator/: Category.py  Component.py  ComponentLibrary.py  ComponentOrigin.py  ComponentShape.py  Dimension.py  Enums.py  Filename.py  Group.py  Hole.py  MainStack.py  MaskPaste.py  Mixins.py  Model3D.py  NameFont.py  Pad.py  PadStyle.py  Part.py  Pattern.py  PatternLibrary.py  PatternOrigin.py  PatternShape.py  Pin.py  Point.py  RecoveryCode.py  SpiceModel.py  Terminal.py  Utils.py  __init__.py
Examples/: Capacitors.py  Common.py  Diodes_LED.py  Diodes_TVS.py  Resistors.py  __init__.py  all.py
Examples/source/: Symbols EIC.elixml
Examples/source/capacitors/: Capacitors Aluminium Axial.elixml  Capacitors Chip Inch.elixml  Capacitors Chip Metric.elixml
Examples/source/diodes-tvs/: Diodes TVS.libxml
media/: repository-logo.pdn
tests/: __init__.py  test_Category.py  test_ComponentLibrary.py  test_ComponentOrigin.py  test_Dimension.py  test_Enums.py  test_Filename.py  test_Group.py  test_Hole.py  test_MainStack.py  test_MaskPaste.py  test_Model3D.py  test_NameFont.py  test_Pad.py  test_PadStyle.py  test_Part.py  test_Pattern.py  test_PatternLibrary.py  test_PatternOrigin.py  test_PatternShape.py  test_Pin.py  test_Point.py  test_SpiceModel.py  test_Terminal.py  test_Utils.py  test_Version.py  utils.py
tests/samples/: expected_led_3mm.libxml  format_test.sample.xml  test_categories.libxml  test_load.libxml
(+5 files in other folders)
