[tool.poetry]
name = "DipTraceGenerator"
version = "0.1.0"
description = "This is the python library for generating the DipTrace components and patterns libraries."
license = "MIT"
readme = "README.md"
repository = "https://github.com/kolod/DipTrace-Generator"
homepage = "https://github.com/kolod/DipTrace-Generator"
keywords = ["DipTrace", "PCB"]
authors = [
	"Oleksandr Kolodkin <oleksandr.kolodkin@ukr.net>",
]
maintainers = [
	"Oleksandr Kolodkin <oleksandr.kolodkin@ukr.net>",
]
include = ["LICENSE", "README.md"]
classifiers=[
	"Development Status :: 2 - Pre-Alpha",
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Environment :: Console",
	"Intended Audience :: Developers",
	"Natural Language :: English",
	"Topic :: Scientific/Engineering",
	"Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
	"Topic :: Software Development :: Libraries",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{include="DipTraceGenerator"}]

[tool.poetry.dependencies]
python = ">=3.8, <4.0"
lxml = "^5.2.1"
termcolor = "^2.3.0"
typing-extensions = {version = "^4.11.0", python = "<3.11"}
pillow = "^10.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"

[tool.poetry.group.examples.dependencies]
tqdm = "^4.66.2"

[tool.poetry.scripts]
examples = "examples.all:main"

[tool.coverage.report]
exclude_also = [
	"if __name__ == .__main__.:"
]
